force-app/main/default/objects/Activity/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <formula>ActivityDate</formula>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>