force-app/main/default/objects/Activity/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Account__c)), Account__r.AM__c,
IF(
 NOT(ISBLANK(Opportunity__c)), Opportunity__r.AM__c,
IF(
 NOT(ISBLANK(Contact__c)), Contact__r.AM__c,
 &apos;&apos;)))</formula>
    <label>AM</label>
    <type>Text</type>
</CustomField>