force-app/main/default/objects/Activity/fields/Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; +   Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Name</label>
    <type>Text</type>
</CustomField>