force-app/main/default/objects/Activity/fields/Assignee_Title__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <label>Assignee Title</label>
    <type>Text</type>
</CustomField>