force-app/main/default/objects/Activity/fields/CRMG_WF__Workflow_Test__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Workflow_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Workflow Test</label>
    <type>Checkbox</type>
</CustomField>