force-app/main/default/objects/Activity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <inlineHelpText>1) New Customer = the account has never purchased from us before
2) Existing Customer = the account has purchased something from us, even it if was a long time ago.
3) Other = sales-related calls with non school or district personnel</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>New Customer - Initial Meeting</fullName>
            </value>
            <value>
                <fullName>New Customer - Follow Up Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>