force-app/main/default/objects/Activity/fields/EventStatus__c.field-meta.xml
<CustomField>
    <fullName>EventStatus__c</fullName>
    <defaultValue>&quot;Scheduled&quot;</defaultValue>
    <description>Enter a status for a given event</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Re-scheduled</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>