force-app/main/default/objects/Activity/fields/PC__c.field-meta.xml
<CustomField>
    <fullName>PC__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Account__c)), Account__r.PC__c,
IF(
 NOT(ISBLANK(Opportunity__c)), Opportunity__r.PC__c,
IF(
 NOT(ISBLANK(Contact__c)), Contact__r.PC__c,
 &apos;&apos;)))</formula>
    <label>PC</label>
    <type>Text</type>
</CustomField>