force-app/main/default/objects/Activity/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Account__c)), Account__r.Region_Name__c,
IF(
 NOT(ISBLANK(Opportunity__c)), Opportunity__r.Region_Name__c,
IF(
 NOT(ISBLANK(Contact__c)), Contact__r.Region_Name__c,
 &apos;&apos;)))</formula>
    <label>Region Name</label>
    <type>Text</type>
</CustomField>