force-app/main/default/objects/Activity/fields/RVP__c.field-meta.xml
<CustomField>
    <fullName>RVP__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Account__c)), Account__r.RVP__c,
IF(
 NOT(ISBLANK(Opportunity__c)), Opportunity__r.RVP__c,
IF(
 NOT(ISBLANK(Contact__c)), Contact__r.RVP__c,
 &apos;&apos;)))</formula>
    <label>RVP</label>
    <type>Text</type>
</CustomField>