force-app/main/default/objects/Activity/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Account__c)), Account__r.Territory_ID__c,
IF(
 NOT(ISBLANK(Opportunity__c)), Opportunity__r.Territory_ID__c,
IF(
 NOT(ISBLANK(Contact__c)), Contact__r.Territory_ID__c,
 &apos;&apos;)))</formula>
    <label>Territory ID</label>
    <type>Text</type>
</CustomField>