force-app/main/default/objects/Activity/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Account__c)), Account__r.Territory_Name__r.Name,
IF(
 NOT(ISBLANK(Opportunity__c)), Opportunity__r.Territory_Name__c,
IF(
 NOT(ISBLANK(Contact__c)), Contact__r.Territory_Name__c,
 &apos;&apos;)))</formula>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>